deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: flask-server-deployment

  labels:

    app: flask-app

spec:

  replicas: 1

  selector:

    matchLabels:

      app: flask-app

  template:

    metadata:

      labels:

        app: flask-app

    spec:

      containers:

      - name: flask-app

        image: riteshb0705/python-app:v1.0

        imagePullPolicy: Always

        ports:

        - containerPort: 8080
