service.yaml
apiVersion: v1

kind: Service

metadata:

  name: flask-server-service

  labels: 

    app: flask-app

spec:

  type: NodePort

  selector:

    app: flask-app

  ports:

    - port: 80

      targetPort: 8080
