ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: minimal-ingress

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

    alb.ingress.kubernetes.io/security-groups: sg-id #create subnet and open port 80 

    alb.ingress.kubernetes.io/subnets: subnet-1, subnet-2, subnet-3 #public subnets

spec:

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: flask-server-service

            port:

              number: 80
